--- a/Example/www/index.html
+++ b/Example/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Intercom Cordova Sample</title>
     </head>
@@ -14,6 +14,7 @@
             <p><button id="login-btn">Login</button></p>
             <p><button id="logout-btn">Logout</button></p>
             <p><button id="open-intercom-btn">Open Intercom</button></p>
+            <p><button id="open-help-center-btn">Open Help Center</button></p>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
