--- a/Example/www/index.html
+++ b/Example/www/index.html
@@ -15,6 +15,8 @@
             <p><button id="logout-btn">Logout</button></p>
             <p><button id="open-intercom-btn">Open Intercom</button></p>
             <p><button id="open-help-center-btn">Open Help Center</button></p>
+            <p><button id="display-carousel-btn">Display Carousel</button></p>
+            <p><button id="display-article-btn">Display Article</button></p>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
