--- a/Example/www/index.html
+++ b/Example/www/index.html
@@ -14,9 +14,14 @@
             <p><button id="login-btn">Login</button></p>
             <p><button id="logout-btn">Logout</button></p>
             <p><button id="open-intercom-btn">Open Intercom</button></p>
-            <p><button id="open-help-center-btn">Open Help Center</button></p>
             <p><button id="display-carousel-btn">Display Carousel</button></p>
             <p><button id="display-article-btn">Display Article</button></p>
+            <p><button id="open-help-center-btn">Open Help Center</button></p>
+            <p><button id="open-help-center-filtered-btn">Open Filtered Help Center</button></p>
+            <h5>Help Center Data API</h5>
+            <p><button id="help-center-data-api-fetch-btn">Fetch collections</button></p>
+            <p><button id="help-center-data-api-fetch-content-btn">Fetch collection content</button></p>
+            <p><button id="help-center-data-api-search-btn">Search help center</button></p>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
