Add displaySurvey public api

--- a/Example/www/index.html
+++ b/Example/www/index.html
@@ -16,6 +16,7 @@
             <p><button id="open-intercom-btn">Open Intercom</button></p>
             <p><button id="display-carousel-btn">Display Carousel</button></p>
             <p><button id="display-article-btn">Display Article</button></p>
+            <p><button id="display-survey-btn">Display Survey</button></p>
             <p><button id="open-help-center-btn">Open Help Center</button></p>
             <p><button id="open-help-center-filtered-btn">Open Filtered Help Center</button></p>
             <h5>Help Center Data API</h5>
@@ -25,6 +26,5 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-
     </body>
 </html>
